Add MacOS to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-# Created by https://www.toptal.com/developers/gitignore/api/python,visualstudiocode,latex,jupyternotebooks,linux
-# Edit at https://www.toptal.com/developers/gitignore?templates=python,visualstudiocode,latex,jupyternotebooks,linux
+# Created by https://www.toptal.com/developers/gitignore/api/macos,python,jupyternotebooks,visualstudiocode,linux,latex
+# Edit at https://www.toptal.com/developers/gitignore?templates=macos,python,jupyternotebooks,visualstudiocode,linux,latex
 
 ### JupyterNotebooks ###
 # gitignore template for Jupyter Notebooks
@@ -340,6 +340,39 @@ TSWLatexianTemp*
 # .nfs files are created when an open file is removed but is still being accessed
 .nfs*
 
+### macOS ###
+# General
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Icon must end with two \r
+Icon
+
+
+# Thumbnails
+._*
+
+# Files that might appear in the root of a volume
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
+
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
+
+### macOS Patch ###
+# iCloud generated files
+*.icloud
+
 ### Python ###
 # Byte-compiled / optimized / DLL files
 __pycache__/
@@ -527,4 +560,4 @@ pyrightconfig.json
 .history
 .ionide
 
-# End of https://www.toptal.com/developers/gitignore/api/python,visualstudiocode,latex,jupyternotebooks,linux
+# End of https://www.toptal.com/developers/gitignore/api/macos,python,jupyternotebooks,visualstudiocode,linux,latex
