--- a/exercises/pyproject.toml
+++ b/exercises/pyproject.toml
@@ -5,7 +5,9 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "jinja2>=3.1.5",
     "matplotlib>=3.10.0",
     "numpy>=2.2.2",
+    "pandas>=2.2.3",
     "scipy>=1.15.1",
 ]
