--- a/.github/workflows/latex_deploy.yml
+++ b/.github/workflows/latex_deploy.yml
@@ -1,28 +1,22 @@
-name: Deploy PDF
-
+name: Build LaTeX document
 on:
   push:
     branches: [ main ]
   pull_request:
     branches: [ main ]
 
-  workflow_dispatch:
-
 jobs:
-  build:
+  build_latex:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
+      - name: Set up Git repository
         uses: actions/checkout@v4
-      - name: Build
+      - name: Compile LaTeX document
         uses: xu-cheng/latex-action@v3
         with:
-          root_file: ./doc/main.tex
-      - name: Copy
-        run: |
-          mkdir out
-          cp ./doc/main.pdf ./out/main.pdf
-      - uses: actions/upload-artifact@v4
+          root_file: main.tex
+      - name: Upload PDF file
+        uses: actions/upload-artifact@v4
         with:
-          name: exercises
-          path: out/main.pdf
+          name: PDF
+          path: main.pdf
