--- a/.github/workflows/latex_deploy.yml
+++ b/.github/workflows/latex_deploy.yml
@@ -15,8 +15,9 @@ jobs:
         uses: xu-cheng/latex-action@v3
         with:
           root_file: main.tex
+          working_directory: doc/
       - name: Upload PDF file
         uses: actions/upload-artifact@v4
         with:
           name: PDF
-          path: main.pdf
+          path: doc/main.pdf
