--- a/.github/workflows/latex_deploy.yml
+++ b/.github/workflows/latex_deploy.yml
@@ -16,8 +16,17 @@ jobs:
         with:
           root_file: main.tex
           working_directory: doc/
+      - name: Copy
+        run: |
+          mkdir out
+          cp doc/main.pdf out/main.pdf
       - name: Upload PDF file
         uses: actions/upload-artifact@v4
         with:
           name: PDF
-          path: doc/main.pdf
+          path: out/main.pdf
+      - name: Deploy
+        uses: JamesIves/github-pages-deploy-action@3.6.2
+        with:
+          SINGLE_COMMIT: true
+          FOLDER: out
