fix version in deploy latex_deploy.yml

--- a/.github/workflows/latex_deploy.yml
+++ b/.github/workflows/latex_deploy.yml
@@ -26,6 +26,6 @@ jobs:
           name: PDF
           path: out/main.pdf
       - name: Deploy
-        uses: JamesIves/github-pages-deploy-action@4
+        uses: JamesIves/github-pages-deploy-action@v4
         with:
           folder: out
