--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "matplotlib>=3.10.0",
     "numpy>=2.2.2",
     "pandas>=2.2.3",
+    "pytest>=8.3.4",
     "scipy>=1.15.1",
     "sympy>=1.13.3",
 ]
