--- a/.github/workflows/latex_deploy.yml
+++ b/.github/workflows/latex_deploy.yml
@@ -20,14 +20,14 @@ jobs:
           # point at multiple root files (bash-globbed)
           root_file: |
             doc/main.tex
-            exam_prep/exam.tex
+            exam_prep/main.tex
           work_in_root_file_dir: true
 
       - name: Collect PDFs
         run: |
           mkdir -p out
           cp doc/main.pdf   out/main.pdf
-          cp exam_prep/exam.pdf  out/exam.pdf
+          cp exam_prep/main.pdf  out/exam.pdf
 
       - name: Upload PDFs artifact
         uses: actions/upload-artifact@v4
